# ai-sentiment-journal

./: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
Back/: app.py  db.py  text.py
Front/: index.html
static/: index.html  styles.css
tests/: test_app.py
